<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_dashboard" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance_menu"
            android:icon="@drawable/ic_collections_bookmark"
            android:title="@string/menu_attendance" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance"
            android:title="@string/view_attendance"
            android:visible="false" />
        <item
            android:id="@+id/nav_addAttendanceFragment"
            android:title="@string/menu_add_attendance"
            android:visible="false" />
        <item
            android:id="@+id/nav_regularizeAppliedFragment"
            android:title="@string/regularize_applied"
            android:visible="false" />
        <item
            android:id="@+id/nav_pendingApprovalFragment"
            android:title="@string/regularize_pending_approval"
            android:visible="false" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leaves_menu"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/menu_leaves" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leaves"
            android:title="@string/add_leaves"
            android:visible="false" />
        <item
            android:id="@+id/nav_leaves_data"
            android:title="@string/total_leaves"
            android:visible="false" />
        <item
            android:id="@+id/nav_applied_leaves"
            android:title="@string/leaves_applied"
            android:visible="false" />
        <item
            android:id="@+id/nav_approve_leaves"
            android:title="@string/approve_leaves"
            android:visible="false" />
    </group>

    <!--DCR Group-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dcr_menu"
            android:icon="@drawable/ic_dcr"
            android:title="@string/menu_dcr" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dcr"
            android:title="@string/view_dcr"
            android:visible="false" />
        <item
            android:id="@+id/nav_dcr_form"
            android:title="@string/fill_dcr"
            android:visible="false" />
    </group>

    <item
        android:id="@+id/nav_vms"
        android:icon="@drawable/ic_visitor"
        android:title="@string/vms" />

    <item
        android:id="@+id/nav_holidays"
        android:icon="@drawable/ic_holiday"
        android:title="@string/menu_holidays" />

    <item
        android:id="@+id/nav_policy"
        android:icon="@drawable/ic_policy"
        android:title="@string/menu_policy" />

    <item
        android:id="@+id/nav_shifts"
        android:icon="@drawable/ic_shift"
        android:title="@string/menu_shifts" />

    <item
        android:id="@+id/nav_claim_management"
        android:icon="@drawable/ic_payments"
        android:title="@string/menu_claim_management" />

    <item
        android:id="@+id/nav_documents"
        android:icon="@drawable/ic_document"
        android:title="@string/menu_documents_upload" />

    <!--    <item-->
    <!--        android:id="@+id/nav_payroll"-->
    <!--        android:icon="@drawable/ic_payroll"-->
    <!--        android:title="Payroll (Coming Soon*)" />-->

    <!--    <item-->
    <!--        android:id="@+id/nav_about_us"-->
    <!--        android:icon="@drawable/ic_info"-->
    <!--        android:title="About XeDigital.ai" />-->

    <!--    <item-->
    <!--        android:id="@+id/nav_permission"-->
    <!--        android:icon="@drawable/ic_security"-->
    <!--        android:title="Permissions" />-->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>